--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     <body class="d-flex flex-column h-100">
 
 <script> 
-window.location.replace('https://fyi-is.github.io/Learn Smalltalk in Y Minutes.html');
+window.location.replace('https://fyi-is.github.io/eliminating-smalltalk/Learn Smalltalk in Y Minutes.html');
 </script>
     
 
